# Multi-Agent-AI-Trend-Radar

./: README.md  app.py  pyproject.toml
Output/: linkedin_post.md
src/linkedin_post_generator/: crew.py  main.py
src/linkedin_post_generator/config/: agents.yaml  tasks.yaml
